@@ -151,6 +151,9 @@ lighter making things easier to read.
 * (bug 8780) Clarify message for command-line scripts if LocalSettings.php exists but is not readable
 * (bug 8777) Suppress 'previous' link on Special:Allpages when at first page
 * (bug 8774) Fix path for GNU FDL rights icon on new installs
+* Fix multipage selector drop-down for DjVu images to work when title
+  is passed as a query string parameter; we have to pass the title as
+  a form parameter or it gets dropped from the form submission URL
 
 
 == Languages updated ==
